# test_classifiers

./: CMakeLists.txt
scripts/: start_test_lbp_hmc.sh  start_test_lbp_lr.sh
src/: test_classifier.cpp  test_classifier.hpp
src/likelihood/: hmc.cpp  hmc.hpp  logistic_regression.cpp
src/motion/: sampler.cpp  sampler.hpp
src/utils/: c_utils.cpp  c_utils.hpp  utils.hpp
